--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
   "devDependencies": {
     "peggy": "^4.1.1"
+  },
+
+  "scripts": {
+    "generate-parser": "npx peggy --format globals -e peggy src/avanto.pegjs -o build/avanto_parser.js",
+    "build": "npm run generate-parser && cat src/avanto_fastmap.js build/avanto_parser.js > avanto_fastmap.user.js"
   }
 }
